--- a/Lawnmower.html
+++ b/Lawnmower.html
@@ -98,7 +98,7 @@
                                             <h2><a >End Product Description<br /></a></h2>
 									    </header> 
 											<a href="images/lawn4.png" class="image fit"><img src="images/lawn4.png" alt="" /></a>		
-											<a href="images/lawn5.png" class="image fit"><img src="images/lawn5.png" alt="" /></a>							                                       
+											<a href="images/lawn5.PNG" class="image fit"><img src="images/lawn5.PNG" alt="" /></a>							                                       
 											
 										 <!-- new section -->
 
